MET-3011: Started with the conversion in RdfRetriever class